@@ -5,23 +5,28 @@ use warnings;
 
 my $session = EPrints::Session->new();
 
-my $string_frag = lc $session->param( "q" );
-my $table = "ac_".$session->param( "table" );
+my $string_frag = lc($session->param( "q" ) || "");
+my $table = $session->param( "table" );
 my $mode = $session->param( "mode" ) || "phrase";
 if( !defined $table )
 {
 	EPrints::abort( "table" );
 }
-$table=~s/[^_a-z0-9]//sig;
-my $sql;
+my $Q_table = $session->get_database->quote_identifier("ac_$table");
+my $Q_xml = $session->get_database->quote_identifier( "xml" );
+my $Q_value = $session->get_database->quote_identifier( "value" );
+my $Q_string_frag = EPrints::Database::prep_like_value( $string_frag );
 if( $mode eq "phrase" )
 {
-	$sql = "SELECT xml from $table WHERE value LIKE '%".EPrints::Database::prep_like_value( $string_frag )."%' LIMIT 40";
+	$Q_string_frag = "\%$Q_string_frag\%";
 }
-if( $mode eq "prefix" )
+elsif( $mode eq "prefix" )
 {
-	$sql = "SELECT xml from $table WHERE value LIKE '".EPrints::Database::prep_like_value( $string_frag )."%' LIMIT 40";
+	$Q_string_frag = "$Q_string_frag\%";
 }
+$Q_string_frag = $session->get_database->quote_value( $Q_string_frag );
+
+my $sql = "SELECT $Q_xml from $Q_table WHERE $Q_value LIKE $Q_string_frag LIMIT 40";
 
 print <<END;
 <?xml version="1.0" encoding="UTF-8" ?>
